--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <link href="css/popups.css" rel="stylesheet" type="text/css">
+  <link href="css/main.css" rel="stylesheet" type="text/css">
   <title>SkinCoin</title>
 </head>
 
@@ -52,6 +53,101 @@
         Have fun and most importantly, bet responsibly.
       </div>
     </div>
+
+  <section class="siteLinks">
+    <h1 class="heading">Top <span>8 Sites</span> </h1>
+    <div class="buttons">
+      <a class="buttonLink" href="https://daddyskins.com/promo-code/betrefs" target="_blank">
+        <div class="button">
+          <h1 class="title">daddyskins.com</h1>
+          <h1 class="code">code:skincoins</h1>
+          <div class="img">
+            <img src="https://betrefs.com/static/media/daddyskins.43ce3db3.png" alt="">
+          </div>
+          <button class="bonus">10% deposit bonus</button>
+        </div>
+      </a>
+
+      <a class="buttonLink" href="https://daddyskins.com/promo-code/betrefs" target="_blank">
+        <div class="button">
+          <h1 class="title">daddyskins.com</h1>
+          <h1 class="code">code:skincoins</h1>
+          <div class="img">
+            <img src="https://betrefs.com/static/media/daddyskins.43ce3db3.png" alt="">
+          </div>
+          <button class="bonus">10% deposit bonus</button>
+        </div>
+      </a>
+
+      <a class="buttonLink" href="https://daddyskins.com/promo-code/betrefs" target="_blank">
+        <div class="button">
+          <h1 class="title">daddyskins.com</h1>
+          <h1 class="code">code:skincoins</h1>
+          <div class="img">
+            <img src="https://betrefs.com/static/media/daddyskins.43ce3db3.png" alt="">
+          </div>
+          <button class="bonus">10% deposit bonus</button>
+        </div>
+      </a>
+
+      <a class="buttonLink" href="https://daddyskins.com/promo-code/betrefs" target="_blank">
+        <div class="button">
+          <h1 class="title">daddyskins.com</h1>
+          <h1 class="code">code:skincoins</h1>
+          <div class="img">
+            <img src="https://betrefs.com/static/media/daddyskins.43ce3db3.png" alt="">
+          </div>
+          <button class="bonus">10% deposit bonus</button>
+        </div>
+      </a>
+
+      <a class="buttonLink" href="https://daddyskins.com/promo-code/betrefs" target="_blank">
+        <div class="button">
+          <h1 class="title">daddyskins.com</h1>
+          <h1 class="code">code:skincoins</h1>
+          <div class="img">
+            <img src="https://betrefs.com/static/media/daddyskins.43ce3db3.png" alt="">
+          </div>
+          <button class="bonus">10% deposit bonus</button>
+        </div>
+      </a>
+
+      <a class="buttonLink" href="https://daddyskins.com/promo-code/betrefs" target="_blank">
+        <div class="button">
+          <h1 class="title">daddyskins.com</h1>
+          <h1 class="code">code:skincoins</h1>
+          <div class="img">
+            <img src="https://betrefs.com/static/media/daddyskins.43ce3db3.png" alt="">
+          </div>
+          <button class="bonus">10% deposit bonus</button>
+        </div>
+      </a>
+
+      <a class="buttonLink" href="https://daddyskins.com/promo-code/betrefs" target="_blank">
+        <div class="button">
+          <h1 class="title">daddyskins.com</h1>
+          <h1 class="code">code:skincoins</h1>
+          <div class="img">
+            <img src="https://betrefs.com/static/media/daddyskins.43ce3db3.png" alt="">
+          </div>
+          <button class="bonus">10% deposit bonus</button>
+        </div>
+      </a>
+
+      <a class="buttonLink" href="https://daddyskins.com/promo-code/betrefs" target="_blank">
+        <div class="button">
+          <h1 class="title">daddyskins.com</h1>
+          <h1 class="code">code:skincoins</h1>
+          <div class="img">
+            <img src="https://betrefs.com/static/media/daddyskins.43ce3db3.png" alt="">
+          </div>
+          <button class="bonus">10% deposit bonus</button>
+        </div>
+      </a>
+
+     
+    </div>
+  </section>
   </main>
   <script src="app.js"></script>
 </body>
